--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,14 +21,14 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(top.png);
   background-size: cover;
-  color: white;
+  color: #FFFFFF;
   text-align: center;
 }
 
 .top-wrapper h1 {
   opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 5px;
+  font-size: 50px;
+  letter-spacing: 9px;
 }
 
 .top-wrapper p {
