--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,7 +111,7 @@ header {
   background-color: rgba(255,255,255,0.3);
 }
 
-.MyHobby {
+.profile {
   height: 580px;
   padding-bottom: 80px;
   padding-left: 5%;
@@ -135,11 +135,11 @@ header {
   width: 25%;
 }
 
-.lesson-icon {
+.profile {
   position: relative;
 }
 
-.lesson-icon p {
+.profile p {
   position: absolute;
   top: 37%;
   width: 100%;
