--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,19 +21,19 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(top.png);
   background-size: cover;
-  color: #808080;
+  color: white;
   text-align: center;
 }
 
 .top-wrapper h1 {
   opacity: 0.7;
-  font-size: 50px;
+  font-size: 70px;
   letter-spacing: 9px;
 }
 
 .top-wrapper p {
   opacity: 0.7;
-  font-size: 16px;
+  font-size: 25px;
   margin-bottom: 40px;
 }
 
@@ -135,11 +135,11 @@ header {
   width: 25%;
 }
 
-.profile {
+.{
   position: relative;
 }
 
-.profile p {
+. p {
   position: absolute;
   top: 37%;
   width: 100%;
