--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,12 +29,14 @@ a {
   opacity: 0.7;
   font-size: 70px;
   letter-spacing: 9px;
+  text-align: center;
 }
 
 .top-wrapper p {
   opacity: 0.7;
   font-size: 25px;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .btn-wrapper {
@@ -125,9 +127,13 @@ header {
   padding-bottom: 50px;
   color: #5f5d60;
 }
-
+.instagram{
+  text-align: center;
+}
 .heading h2 {
   font-weight: normal;
+  text-align: center;
+  font-size: 40px;
 }
 
 .lesson {
@@ -268,4 +274,20 @@ footer {
   .message-wrapper .btn {
     width: 100%;
   }
+}
+.contact h1{
+  text-align: center;
+}
+.icons{
+  text-align: center;
+}
+
+.twitter-color{
+  color:black;
+}
+.facebook-color{
+  color:black;
+}
+.instagram-color{
+  color:black;
 }
